# tweakpng

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  read_me.md  readme.md  todo.md  vcpkg.json
docs/: building.md  todo.md
docs/original/: tweakpng-src.txt  tweakpng.txt
src/: CMakeLists.txt  charset.cpp  chunk.cpp  iccprof.cpp  pngtodib.cpp  pngtodib.h  resource.h  tweakpng.cpp  tweakpng.h  tweakpng.manifest  tweakpng.rc  twpng-config.h  viewer.cpp
src/proj/vs2022/: tweakpng.sln  tweakpng.vcxproj  tweakpng.vcxproj.filters
